removed Services for now..

--- a/TecNET/Client/Pages/Questions/QuestionSelect.razor
+++ b/TecNET/Client/Pages/Questions/QuestionSelect.razor
@@ -20,7 +20,7 @@
         {
             questions = await httpClient.GetFromJsonAsync<Questions[]>("api/questions");
         }
-        catch (Exception e)
+        catch (Exception)
         {
 
         }
